tempChange/snapshot-pro-api-permissions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"7","meta.helm.sh/release-name":"snapshot-pro-api","meta.helm.sh/release-namespace":"urbi"},"creationTimestamp":"2025-05-02T02:20:34Z","generation":7,"labels":{"app.kubernetes.io/instance":"snapshot-pro-api-permissions","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"snapshot-pro-api-permissions","app.kubernetes.io/version":"2.13.0","helm.sh/chart":"pro-api-1.38.0"},"n [...]
    meta.helm.sh/release-name: snapshot-pro-api
    meta.helm.sh/release-namespace: urbi
  labels:
    app.kubernetes.io/instance: snapshot-pro-api-permissions
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: snapshot-pro-api-permissions
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: pro-api-1.38.0
  name: snapshot-pro-api-permissions
  namespace: urbi
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: snapshot-pro-api-permissions
      app.kubernetes.io/name: snapshot-pro-api-permissions
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/secret: 61244309c1472069375a2f6d9e9a374c71db0f41be2082b8d1aeebb585b82868
        kubectl.kubernetes.io/restartedAt: "2025-05-14T15:23:13Z"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: snapshot-pro-api-permissions
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: snapshot-pro-api-permissions
        app.kubernetes.io/version: 2.13.0
        helm.sh/chart: pro-api-1.38.0
    spec:
      containers:
      - env:
        - name: DEBUG
          value: "false"
        - name: ENV
          value: snapprod
        - name: Postgres__ConnectionString
          value: Server=haproxy;Port=5000;Database=prosnapshot;UID=prosnapshot;Pooling=True;Minimum
            Pool Size=1;Maximum Pool Size=5;Timeout=15;Connection Idle Lifetime=30;KeepAlive=5;
        - name: Postgres__ConnectionStringReadonly
        - name: Postgres__Password
          valueFrom:
            secretKeyRef:
              key: permissionsDbConnectionPwd
              name: snapshot-pro-api-secret
        - name: API_URL
          value: http://snapshot-pro-api
        - name: API_TOKEN
          valueFrom:
            secretKeyRef:
              key: apiKey
              name: snapshot-pro-api-secret
        - name: Auth__Type
          value: openid10
        - name: Auth__PermissionsApiKey
          valueFrom:
            secretKeyRef:
              key: permissionsApiKey
              name: snapshot-pro-api-secret
        - name: KEYS_SERVICE_URL
          value: http://keys-api
        - name: Redis__Host
          value: redis-redis-cluster
        - name: Redis__Port
          value: "6379"
        - name: Redis__Username
          value: default
        - name: Redis__Password
          valueFrom:
            secretKeyRef:
              key: redisPassword
              name: snapshot-pro-api-secret
        - name: Common__Logging__Format
          value: default
        - name: Common__Logging__Targets
        - name: Common__DeleteInactiveUsers
          value: "false"
        - name: Common__DefaultPermissions__OpenProUi
          value: "true"
        - name: Common__DefaultPermissions__Assets__0
          value: branch
        - name: Common__DefaultPermissions__Assets__1
          value: building
        - name: Common__DefaultPermissions__Analytics__0
          value: '*'
        - name: Common__DefaultPermissions__AddUserAssets__Allow
          value: "true"
        - name: Common__DefaultPermissions__AddUserAssets__Quantity
          value: "100"
        - name: Common__DefaultPermissions__AddUserAssets__FileSize
          value: "100"
        - name: Common__DefaultPermissions__Isochrones
          value: "1000"
        - name: Common__AllowPermissionsToAnyAsset
          value: "false"
        - name: Kafka__BootstrapServers
          value: 10.246.2.7:9092,10.246.0.244:9092,10.246.3.17:9092
        - name: Kafka__SecurityProtocol
          value: SaslPlaintext
        - name: Kafka__SaslMechanism
          value: PLAIN
        - name: Kafka__SaslUsername
          value: admin
        - name: Kafka__SaslPassword
          valueFrom:
            secretKeyRef:
              key: kafkaSaslPassword
              name: snapshot-pro-api-secret
        - name: Kafka__PermissionsTopicSettings__Name
          value: dscv.production.autodetection.permission
        - name: Kafka__PermissionsTopicSettings__ReaderGroupId
          value: pro.permissions.group.snapprod
        - name: Kafka__EventsTopicSettings__Name
          value: dscv.production.autodetection.pro.events
        - name: Kafka__UseReplicaTopics
          value: "false"
        - name: LocalCache__Enabled
          value: "true"
        - name: LocalCache__TrackStatistics
          value: "false"
        image: registry.momrah.gov.sa/urbi/2gis-on-premise/urbi-geo-permissions-api:feature-pro-6703-customadmdiv-389a32a8
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health/live
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        name: snapshot-pro-api-permissions
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: http
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "3"
            memory: 3G
          requests:
            cpu: 1000m
            memory: 1024M
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: http
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: temp-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
      volumes:
      - emptyDir: {}
        name: temp-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-05-14T15:23:38Z"
    lastUpdateTime: "2025-05-14T15:23:38Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-05-02T02:20:34Z"
    lastUpdateTime: "2025-06-30T08:06:06Z"
    message: ReplicaSet "snapshot-pro-api-permissions-9b5cf5df6" has successfully
      progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 9
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
