tempChange/snapshot-pro-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"6","meta.helm.sh/release-name":"snapshot-pro-ui","meta.helm.sh/release-namespace":"urbi"},"labels":{"app.kubernetes.io/instance":"snapshot-pro-ui","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"pro-ui","app.kubernetes.io/version":"4.14.0","manifest":"1750846852"},"name":"snapshot-pro-ui","namespace":"urbi"},"spec":{"progressDeadlineSeconds":600,"replicas":10,"revisio [...]
    meta.helm.sh/release-name: snapshot-pro-ui
    meta.helm.sh/release-namespace: urbi
  generation: 12
  labels:
    app.kubernetes.io/instance: snapshot-pro-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pro-ui
    app.kubernetes.io/version: 4.14.0
    manifest: "1750846852"
  name: snapshot-pro-ui
  namespace: urbi
spec:
  progressDeadlineSeconds: 600
  replicas: 10
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: snapshot-pro-ui
      app.kubernetes.io/name: pro-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-06-30T08:16:41Z"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: snapshot-pro-ui
        app.kubernetes.io/name: pro-ui
        app.kubernetes.io/version: 4.14.0
    spec:
      containers:
      - env:
        - name: NETWORK_TIMEOUT
          value: "30000"
        - name: SERVER_NETWORK_TIMEOUT
          value: "30000"
        - name: URBI_API_URL
          value: https://cityview-pro-api.momah.gov.sa/
        - name: MAPGL_HOST
          value: map-urbi-prod.momrah.gov.sa
        - name: MAPGL_SCRIPT_PATH
        - name: MAPGL_KEY
          value: 28ed92f1-de4b-4060-b159-2dc19e9b8bf5
        - name: MAPGL_STYLE_URL
          value: https://axownvq9lhmx.compat.objectstorage.me-jeddah-1.oraclecloud.com/snapshot-pro-ui-styles/styles/dark/
        - name: MAPGL_STYLE_ICONS_URL
        - name: MAPGL_STYLE_FONTS_URL
        - name: MAPGL_STYLE_PREVIEW
        - name: MAPGL_STYLE_MODELS_URL
        - name: LOG_LEVEL
          value: warn
        - name: IS_ON_PREM
          value: "true"
        - name: SSO_AUTH
          value: "true"
        - name: NODE_TLS_REJECT_UNAUTHORIZED
          value: "0"
        - name: AUTH_SAFE_HOSTS
          value: .*
        - name: AUTH_SECURE
          value: "false"
        - name: AUTH_CODE_URL
          value: https://cityview-pro.momah.gov.sa/api/auth/code
        - name: AUTH_CLIENT_ID
          value: Outbalady.balady.eye.pro
        - name: AUTH_CLIENT_SECRET
          value: c2bf5ab3afa84766ada157e862b4b5f6
        - name: O_AUTH_PROVIDER
          value: openid
        - name: O_AUTH_SCOPES
          value: openid email offline_access
        - name: OPEN_ID_WELL_KNOWN_URL_LIST_URL
          value: https://ssoapp.balady.gov.sa/.well-known/openid-configuration
        - name: APP_LOCALE
          value: ar_AE
        - name: APP_THEME
          value: urbi
        - name: AUTH_BRAND
        - name: APP_INITIAL_MAP_CENTER
          value: '[46.71, 24.72]'
        - name: SUPPORT_DOCUMENTATION_LINK
          value: https://docs.urbi.ae/en/pro/start
        - name: IMMERSIVE_MODELS
        - name: HOME
          value: /tmp
        - name: SERVER_PORT
          value: "3000"
        - name: MAPBOX_STYLE_TOKEN
          value: pk.eyJ1Ijoib21hci05MSIsImEiOiJjbHdqM2RkN2cwNGY5MmpyeWl3N3YxNzI3In0.DnRmsssRTaWzeaX6cQtHqQ
        - name: FEATURE_EXTERNAL_STYLE_MANAGER_IS_ENABLED
          value: "true"
        - name: PUBLIC_S3_HOST
          value: https://axownvq9lhmx.compat.objectstorage.me-jeddah-1.oraclecloud.com/
        - name: PUBLIC_S3_URL
          value: https://axownvq9lhmx.compat.objectstorage.me-jeddah-1.oraclecloud.com/
        - name: S3_STYLES_BUCKET
          value: pro-ui-styles
        - name: STYLES_CONFIG_URL
          value: https://axownvq9lhmx.compat.objectstorage.me-jeddah-1.oraclecloud.com/snapshot-pro-ui-styles/config/production/styleConfig.json
        - name: S3_WHITE_LABEL_BUCKET
          value: pro-ui-styles
        - name: WHITE_LABEL_CONFIG_URL
          value: https://axownvq9lhmx.compat.objectstorage.me-jeddah-1.oraclecloud.com/snapshot-pro-ui-styles/config/production/whitelabel.json
        - name: ZENITH_HOST
        - name: ZENITH_TILE_SET
        - name: ZENITH_PROTOCOL
        - name: ZENITH_SUBDOMAINS
        - name: MAILER_API_TOKEN
          value: "1"
        image: registry.momrah.gov.sa/urbi/2gis-on-premise/urbi-pro:PRO-6489-moonshoot-demo-branch-prod
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5
        name: pro-ui
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/healthcheck/app
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "3"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
status:
  availableReplicas: 10
  conditions:
  - lastTransitionTime: "2025-07-02T19:27:22Z"
    lastUpdateTime: "2025-07-02T19:27:22Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-04-25T10:19:18Z"
    lastUpdateTime: "2025-07-02T19:27:54Z"
    message: ReplicaSet "snapshot-pro-ui-6dc6d5db67" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 12
  readyReplicas: 10
  replicas: 10
  updatedReplicas: 10
